Fixed some spacing issues on questions

--- a/src/sass/components/_components.home-news.scss
+++ b/src/sass/components/_components.home-news.scss
@@ -4,8 +4,12 @@
     display: flex;
     flex-direction: column;
     &__article {
+        margin-bottom: 2*$inuit-global-spacing-unit;
         @media screen and (min-width: 768px) {
             width: 45%;
+        }
+        @media screen and (min-width: 1100px) {
+            width: auto;
         }
         &-container {
             width: 100%;
@@ -16,7 +20,7 @@
             @media screen and (min-width: 768px) {
                 flex-direction: row;
                 max-width: 100%;
-                justify-content: space-between;
+                justify-content: space-around;
             }
         }
         &:nth-child(n+2) {
@@ -46,7 +50,7 @@
         margin-right: $inuit-global-spacing-unit-small;
     }
     &__img {
-        margin-bottom: 8px;
+        margin-bottom: $inuit-global-spacing-unit-small;
         max-width: 30em;
         width: 100%;
     }
@@ -54,6 +58,7 @@
 
 .read-more {
     color: #ffa162;
+    float: right;
     &::after {
         font-family: FontAwesome;
         content: "\f061";
