--- a/src/sass/components/_components.home-questions.scss
+++ b/src/sass/components/_components.home-questions.scss
@@ -15,15 +15,30 @@
             display: flex;
             justify-content: center;
             padding: 3*$inuit-global-spacing-unit $inuit-global-spacing-unit-small;
+            &::after {
+                font-family: fontAwesome;
+                @include inuit-font-size(200px);
+                margin-left: 0.2em;
+            }
         }
         &_bcg-dark {
             color: white;
             background: url("../img/questions-dark-bcg.png");
             background-size: 300px;
+            @media screen and (min-width: 1440px) {
+                &::after {
+                    content: "\f059";
+                }
+            }
         }
         &_bcg-light {
             background: url("../img/questions-light-bcg.png");
             background-size: 300px;
+            @media screen and (min-width: 1440px) {
+                &::after {
+                    content: "\f2b5";
+                }
+            }
         }
     }
 }
